
- Issue #2801: fix bug in the float.is_integer method where a ValueError
  was sometimes incorrectly raised.

- Issue #2790: sys.flags was not properly exposing its bytes_warning attribute.

- Issue #2196: hasattr now lets exceptions which do not inherit Exception
  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

Library
-------

- The imageop module has been deprecated for removal in Python 3.0.

- #2250: Exceptions raised during evaluation of names in rlcompleter's
  ``Completer.complete()`` method are now caught and ignored.

- #2659: Added ``break_on_hyphens`` option to textwrap TextWrapper class.

- The mhlib module has been deprecated for removal in Python 3.0.

- The linuxaudiodev module has been deprecated for removal in Python 3.0.

- The ihooks module has been deprecated for removal in Python 3.0.

- The fpformat module has been deprecated for removal in Python 3.0.

- The dl module has been deprecated for removal in Python 3.0.

- The Canvas module has been deprecated for removal in Python 3.0.

- The compiler package has been deprecated for removal in Python 3.0.

- The Bastion and rexec modules have been deprecated for removal in Python 3.0.

- The bsddb185 module has been deprecated for removal in Python 3.0.

- The pure module has been deprecated for removal in Python 3.0.

- Issue #2487: change the semantics of math.ldexp(x, n) when n is too
  large to fit in a C long.  ldexp(x, n) now returns a zero (with
  suitable sign) if n is large and negative; previously, it raised
  OverflowError.

- The toaiff module has been deprecated for removal in Python 3.0.

- The test.testall module has been deprecated for removal in Python 3.0.

- The new module has been deprecated for removal in Python 3.0.

- The user module has been deprecated for removal in Python 3.0.

- The stringold module has been deprecated for removal in Python 3.0.
