@@ -26,6 +26,9 @@ Extension Modules
 Library
 -------
 
+- The SocketServer module has been renamed 'socketserver'.  The old
+  name is now deprecated.
+
 - The imageop module has been deprecated for removal in Python 3.0.
 
 - #2250: Exceptions raised during evaluation of names in rlcompleter's
